--- a/plugin.xml
+++ b/plugin.xml
@@ -13,11 +13,17 @@
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml">
-            <uses-permission android:name="android.permission.RECORD_AUDIO" />
-            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+            <uses-permission android:name="jp.co.sharp.android.permission.VOICEUI" />
             <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+            <uses-permission android:name="android.permission.RECORD_AUDIO" />
             <uses-permission android:name="android.permission.INTERNET" />
+            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+            <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+            <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+            <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+            <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
         </config-file>
         <config-file parent="/manifest/application" target="AndroidManifest.xml">
             <uses-library android:name="jp.co.sharp.android.voiceui.framework" android:required="true" />
@@ -36,6 +42,7 @@
         </config-file>
         <source-file src="src/android/baiduvoicesdk.java" target-dir="src/com/heytz/baiduvoicesdk"/>
         <source-file src="libs/bdasr_V3_20180320_9066860.jar" target-dir="libs"/>
+        <source-file src="libs/com.baidu.tts_2.3.1.20170808_e39ea89.jar" target-dir="libs"/>
         <source-file src="libs/jp.co.sharp.android.voiceui.framework.jar" target-dir="libs"/>
         <source-file src="libs/arm64-v8a/" target-dir="libs"/>
         <source-file src="libs/armeabi/" target-dir="libs"/>
