--- a/plugin.xml
+++ b/plugin.xml
@@ -42,7 +42,7 @@
         </config-file>
         <source-file src="src/android/baiduvoicesdk.java" target-dir="src/com/heytz/baiduvoicesdk"/>
         <source-file src="libs/bdasr_V3_20180320_9066860.jar" target-dir="libs"/>
-        <source-file src="libs/jp.co.sharp.android.voiceui.framework.jar" target-dir="libs"/>
+        <!--<source-file src="libs/jp.co.sharp.android.voiceui.framework.jar" target-dir="libs"/>-->
         <source-file src="libs/arm64-v8a/" target-dir="libs"/>
         <source-file src="libs/armeabi/" target-dir="libs"/>
         <source-file src="libs/armeabi-v7a/" target-dir="libs"/>
